@@ -21,5 +21,7 @@ if [expr ([istarget "i*86-*-*"] || [istarget "x86_64-*-*"]) && [gas_64_check] &&
 	}
     }
 
+    run_list_test "inval" "-al"
+
     set ASFLAGS "$old_ASFLAGS"
 }
